--- a/share-gateway/src/main/resources/application.yml
+++ b/share-gateway/src/main/resources/application.yml
@@ -8,3 +8,7 @@ spring:
           uri: http://127.0.0.1:8001
           predicates:
             - Path=/user-service/**
+        - id: route-content
+          uri: http://127.0.0.1:8002
+          predicates:
+            - Path=/content-service/**
