--- a/share-gateway/src/main/resources/application.yml
+++ b/share-gateway/src/main/resources/application.yml
@@ -12,4 +12,16 @@ spring:
           uri: http://127.0.0.1:8002
           predicates:
             - Path=/content-service/**
-
+      globalcors:
+        cors-configurations:
+          '[/**]':
+            # 允许请求来源
+            allowedOriginPatterns: '*'
+            # 允许携带的头信息
+            allowedHeaders: '*'
+            # 允许的请求方式
+            allowedMethods: '*'
+            # 是否允许携带 cookie
+            allowCredentials: 'true'
+            # 跨域检测的有效期，会发起一个OPTION请求
+            maxAge: '3600'
